@@ -1,0 +1,15 @@
+## Process this file with automake to produce Makefile.in
+
+AUTOMAKE_OPTIONS = dist-bzip2
+
+# include debian files into distribution
+EXTRA_DIST = changelog \
+             control \
+             copyright \
+             rules \
+             libgig.install \
+             libgig-dev.install \
+             libgig-dev.docs \
+             libgig-dev.doc-base \
+             gigtools.install \
+             README.Debian
